--- a/crates/tilemap_core/Cargo.toml
+++ b/crates/tilemap_core/Cargo.toml
@@ -5,7 +5,9 @@ edition = "2024"
 
 [dependencies]
 serde = { version = "1", features = ["derive"], optional = true }
+bevy = { version = "0.18.0", optional = true, default-features = false }
 
 [features]
 default = []
 serde = ["dep:serde"]
+bevy = ["dep:bevy"]
