地图使用tilemap渲染

--- a/crates/tilemap_editor/Cargo.toml
+++ b/crates/tilemap_editor/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 bevy = "0.18.0"
+bevy_ecs_tilemap = "0.18"
 serde = { version = "1", features = ["derive"] }
 ron = "0.8"
 rfd = "0.15"
